--- a/package.json
+++ b/package.json
@@ -1,31 +1,46 @@
 {
   "name": "octaview-client",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "description": "A client module for Octaview applications",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "rollup -c",
+    "prepublishOnly": "npm run build" 
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.9",
+    "@babel/preset-react": "^7.25.9",
     "@eslint/js": "^9.13.0",
+    "@rollup/plugin-babel": "^6.0.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
-    "vite": "^5.4.9"
-  }
+    "rollup": "^2.79.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "files": [
+    "dist/",
+    "README.md"
+  ],
+  "keywords": [
+    "octaview",
+    "client",
+    "react"
+  ],
+  "author": "Your Name",
+  "license": "MIT" 
 }
