--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "prepublishOnly": "npm run build"
-  },
+  "dev": "vite",
+  "build:vite": "vite build",
+  "build": "rollup -c",
+  "prepublishOnly": "npm run build"
+},
   "dependencies": {
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
@@ -21,6 +23,7 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -30,7 +33,8 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "vite": "^6.0.3"
   },
   "files": [
     "dist/",
